Update put method
